test_suite/alan-2022-examples/failing/005580_mutation.alan
source K4 begin leave 7 + / 50 end
